tests/kulezi_tests/bad/declaration_in_for.lat
int main() {
    int[] x = new int[5];
    for (int y : x)
        int z = y;
    return 0;
}